Add support for installation of elasticsearch

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for elasticsearch
+
+- name: reload elasticsearch
+  service:
+    name: "{{ elasticsearch_service }}"
+    state: reloaded
