Include missing vars for each distribution

--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -1,6 +1,8 @@
 ---
 # ArchLinux-specific package tasks for elasticsearch
 
+- include_vars: arch.yml
+
 - name: Install elasticsearch
   pacman:
     name: "{{ item }}"
