--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,6 +1,8 @@
 ---
 # Debain-specific package tasks for elasticsearch
 
+- include_vars: debian.yml
+
 - name: Install elasticsearch repository
   apt_repository:
     repo: "deb {{ elasticsearch_repository.url }} {{ elasticsearch_repository.type }}"
