--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -3,6 +3,11 @@
 
 - include_vars: debian.yml
 
+- name: Install https driver for APT
+  apt:
+    name: apt-transport-https
+    state: installed
+
 - name: Install elasticsearch repository
   apt_repository:
     repo: "deb {{ elasticsearch_repository.url }} {{ elasticsearch_repository.type }}"
