--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -1,2 +1,7 @@
 ---
 # plugin installation tasks for elasticsearch
+
+- name: Wait for ElasticSearch to start
+  wait_for:
+    port: 9200
+    delay: 10
