Add support for management of owner/group for conf

--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -13,5 +13,7 @@ elasticsearch_packages:
 elasticsearch_config:
   master: /etc/elasticsearch/elasticsearch.yml
   logging: /etc/elasticsearch/logging.yml
+  owner: root
+  group: elasticsearch
 
 elasticsearch_service: elasticsearch
