--- a/vars/arch.yml
+++ b/vars/arch.yml
@@ -7,5 +7,7 @@ elasticsearch_packages:
 elasticsearch_config:
   master: /etc/elasticsearch/elasticsearch.yml
   logging: /etc/elasticsearch/logging.yml
+  owner: root
+  group: elasticsearch
 
 elasticsearch_service: elasticsearch
