--- a/vars/redhat.yml
+++ b/vars/redhat.yml
@@ -11,5 +11,7 @@ elasticsearch_packages:
 elasticsearch_config:
   master: /etc/elasticsearch/elasticsearch.yml
   logging: /etc/elasticsearch/logging.yml
+  owner: root
+  group: elasticsearch
 
 elasticsearch_service: elasticsearch
