Add tasks and templates for basic configuration

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,2 +1,22 @@
 ---
 # configuration tasks for elasticsearch
+
+- name: Install elasticsearch.yml
+  template:
+    src: elasticsearch.yml.j2
+    dest: "{{ elasticsearch_config.master }}"
+    owner: "{{ elasticsearch_config.owner }}"
+    group: "{{ elasticsearch_config.group }}"
+    mode: 0640
+  notify:
+    reload elasticsearch
+
+- name: Install logging.yml
+  template:
+    src: logging.yml.j2
+    dest: "{{ elasticsearch_config.logging }}"
+    owner: "{{ elasticsearch_config.owner }}"
+    group: "{{ elasticsearch_config.group }}"
+    mode: 0640
+  notify:
+    reload elasticsearch
