--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for elasticsearch
 
-- name: reload elasticsearch
+- name: restart elasticsearch
   service:
     name: "{{ elasticsearch_service }}"
-    state: reloaded
+    state: restarted
