Make host and port on wait_for based on variables

--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -3,5 +3,6 @@
 
 - name: Wait for ElasticSearch to start
   wait_for:
-    port: 9200
+    host: "{{ elasticsearch_bind }}"
+    port: "{{ elasticsearch_port }}"
     delay: 1
