Flush handlers before connecting to ElasticSearch
Make sure that any configuration changes are run before we run wait_for to
ensure we connect to the server correctly with the new configuration before
installing plugins.

--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -1,6 +1,9 @@
 ---
 # plugin installation tasks for elasticsearch
 
+# Make sure the configuration is reloaded (if required) before continuing
+- meta: flush_handlers
+
 - name: Wait for ElasticSearch to start
   wait_for:
     host: "{{ elasticsearch_bind }}"
