--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,10 +2,12 @@
 # defaults file for elasticsearch
 
 elasticsearch_bind: 127.0.0.1
-elasticsearch_port_api: 9200
-elasticsearch_port_cluster: 9300
+elasticsearch_port_http: 9200
+elasticsearch_port_transport: 9300
 
+elasticsearch_node_name: "{{ ansible_hostname }}"
 elasticsearch_cluster_name: elasticsearch
+elasticsearch_group_name: elasticsearch
 
 elasticsearch_plugins_add: []
 elasticsearch_plugins_remove: []
