--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -26,3 +26,13 @@
     state: installed
   with_items:
     "{{ elasticsearch_packages }}"
+
+- name: Install ElasticSearch Defaults
+  template:
+    src: elasticsearch.j2
+    dest: /etc/defaults/elasticsearch
+    owner: root
+    group: root
+    mode: 0640
+  notify:
+    restart elasticsearch
