--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -19,3 +19,13 @@
     state: installed
   with_items:
     "{{ elasticsearch_packages }}"
+
+- name: Install ElasticSearch Defaults
+  template:
+    src: elasticsearch.j2
+    dest: /etc/sysconfig/elasticsearch
+    owner: root
+    group: root
+    mode: 0640
+  notify:
+    restart elasticsearch
