--- a/vars/redhat.yml
+++ b/vars/redhat.yml
@@ -15,3 +15,5 @@ elasticsearch_config:
   group: elasticsearch
 
 elasticsearch_service: elasticsearch
+
+elasticsearch_default_data_dir: /var/lib/elasticsearch
