--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -4,5 +4,5 @@
 - name: Start/Enable ElasticSearch
   service:
     name: "{{ elasticsearch_service }}"
-    state: restarted
+    state: started
     enabled: yes
