--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -23,7 +23,7 @@
 
 - name: Create data directory for ElasticSearch
   file:
-    dest: "{{ elasticsearch_data_dir }}"
+    dest: "{{ elasticsearch_data_dir | default(elasticsearch_default_data_dir) }}"
     state: directory
     owner: elasticsearch
     group: elasticsearch
