--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -25,6 +25,6 @@
   file:
     dest: "{{ elasticsearch_data_dir | default(elasticsearch_default_data_dir) }}"
     state: directory
-    owner: elasticsearch
-    group: elasticsearch
+    owner: "{{ elasticsearch_config.owner }}"
+    group: "{{ elasticsearch_config.group }}"
     mode: 0755
