--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -14,6 +14,7 @@ elasticsearch_config:
   master: /etc/elasticsearch/elasticsearch.yml
   logging: /etc/elasticsearch/logging.yml
   owner: root
+  data: elasticsearch
   group: elasticsearch
 
 elasticsearch_service: elasticsearch
