--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,8 @@ elasticsearch_bind: 127.0.0.1
 elasticsearch_port_http: 9200
 elasticsearch_port_transport: 9300
 
+elasticsearch_heap_size: "{{ ansible_memtotal_mb // 2 }}m"
+
 elasticsearch_node_name: "{{ ansible_hostname }}"
 elasticsearch_cluster_name: elasticsearch
 elasticsearch_group_name: elasticsearch
