--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,10 +9,16 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
+        - 6
         - 7
+    - name: Ubuntu
+      versions:
+        - trusty
+        - xenial
     - name: Debian
       versions:
         - wheezy
+        - jessie
   galaxy_tags:
     - system
     - elasticsearch
