Restore exclude for CentOS6 for the moment
I think there is a bug in Test Kitchen around CentOS6 atm, so restoring block.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -54,6 +54,8 @@ platforms:
 
 suites:
   - name: elasticsearch
+    excludes:
+      - centos-6
     verifier:
       patterns:
         - "roles/*/test/integration/elasticsearch/serverspec/*_spec.rb"
